--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
     "next": "15.3.4",
     "react": "^19.0.0",
